# parosol-tu-wien

./: .gitignore  .hgignore  CMakeLists.txt  LICENCE  README  README.mkdn  mesh.tar.bz2  mesh.tgz
debian/: changelog  control  docs  parosol.examples  rules
doc/: CMakeLists.txt  README  README.mkdn  building.md  file_format.md  index.md  parosol.css  parosol.tex  quickstart.md  userguide.mkd  using_parosol.md  visualize.md
src/: AsciiImage.cpp  AsciiImage.h  AsciiImageMirrored.cpp  AsciiImageMirrored.h  BaseGrid.h  BoundaryCondition.h  CMakeLists.txt  CPULayout.h  Chebyshev.cpp  Chebyshev.h  Config.h  Doxyfile  GReader.cpp  GReader.hpp  GWriter.cpp  GWriter.hpp  GenericMatrix.h  HDF5Image.cpp  HDF5Image.h  HDF5ParfePrinter.h  HDF5Printer.h  ImageReader.h  Jacobi.h  JacobiSmoother.cpp  JacobiSmoother.h  KeyGenerator.h  MlCycle.h  MlLevelCG.h  MlLevelCheb.h  MlOctreeGrid.h  OctreeGrid.h  OctreeNode.h  OptLocalMatrix.h  PCGSolver.cpp  PCGSolver.h  PfePrinter.h  Postprocessing.h  Problem.h  Solver.h  StiffnessMatrix.h  (+11 more)
tools/: AsciiToHDF5.cpp  CMakeLists.txt  CheckForBiggestComponent.h  FractalGenerator.cpp  Image.h  createxmf.py  cropascii.cpp  extrudeiny.cpp  generateSphere.cpp  hdf5verify.cpp  mirrorimage.cpp  perlin.cpp  scaleimage.cpp  statsofascii.cpp
